# $Id$

2008-03-23
	* Fixed compilation with --disable-x11
	* Fixed linux.c compilation problem due to (suspected) broken linux
	headers

2008-03-22
	* Conky 1.5.0 released
	* Smapi review: improved code, fixed memleaks and smapi_bat_perc when
	using pad_percents.
	* Fixed spaced_print, so pad_percents should now work as expected.
	* Removed a line of dead code.
	* Added support for displaying the default gateway.
	* Support displaying current laptop_mode.
	* Per-disk IO scheduler information now available.
	* Support printing current nameservers.

2008-03-20
	* Added CRLF characters to POP3 and IMAP stuff (should play nicer with
	some servers now).
	* Added preliminary support for parsing the output of external commands
	(via $execp and $execpi)
	* Applied FreeBSD total memory patch (thanks Nikos)

2008-03-19
	* Fixed a number of small memory leaks.
	* Performed some minor profiling on Conky; reduced text_buffer_size
	default to 128 bytes to improve performance.
	* Fixed some minor bugs introduced by new patches.

2008-03-17
	* Applied 12 patches:
		1) sysfs battery support (for Linux >=2.6.24) (thanks Kapil)
		2) Improved audacious support patch (thanks Miroslav)
		3) tp_smapi support patch for IBM laptops (thanks Phil)
		4) user info patch (thanks Roland)
		5) added conky build info patch (thanks Roland)
		6) added if_up patch (thanks Phil)
		7) added reload on SIGHUP patch (thanks Jonas)
		8) added pad percentages patch (thanks Jonas)
		9) added fs_type patch (thanks Ryan)
		10) added xmms2 fixes patch (thanks Lassi)
		11) fix sysfs crash patch (thanks Phil)
		12) multiple ip patch ($addrs)
	* Added more alignment support (top_middle, bottom_middle, middle_left,
	and middle_right).

2008-02-08
	* Applied 2 patches:
		1) Add diskio for individual devices
		2) Improved output of units, added "short_units" option

2008-01-05
	* Applied some more submitted patches:
		1) Add long forms of (most of) the command-line options.