@@ -181,6 +181,9 @@ Lucas Brutschy <lbrutschy at users dot sourceforge dot net>
   MLDonkey patch
   if constructs patch
 
+Marcus Huesgen <marcus dot huesgen at googlemail dot com>
+  battery_bar fix
+
 Michal Januszewski <spock at gentoo dot org>
   hddtemp support
 
